# Lyra

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: build.yml  ci.yml
docs/: IMPLEMENTATION_SPEC.md
docs/superpowers/plans/: 2026-07-08-voicetotext-core-pipeline.md  2026-07-08-voicetotext-system-audio.md
docs/superpowers/specs/: 2026-07-08-realtime-audio-translator-design.md
packaging/: app.spec  build_macos.sh  build_windows.ps1  dmg_settings.py  entitlements.plist  installer.iss  launch.py
scripts/: bench_rtf.py  download_models.py  make_speech_fixture.sh
tests/: conftest.py  fakes.py  test_config.py  test_download.py  test_nllb.py  test_orchestrator.py  test_parakeet.py  test_resample.py  test_seamless.py  test_segmenter.py  test_sources.py  test_system_source.py  test_ui.py
voicetotext/: config.py  main.py
voicetotext/asr/: engine.py  events.py  parakeet.py  seamless.py
voicetotext/audio/: macloop_source.py  resample.py  sources.py  system.py  wasapi_loopback.py
voicetotext/models/: download.py  registry.py
voicetotext/pipeline/: messages.py  orchestrator.py
voicetotext/translate/: base.py  detect.py  nllb.py  segmenter.py
voicetotext/ui/: app.py  languages.py  main_window.py  setup.py  transcript_view.py  widgets.py
