[project]
name = "voicetotext"
version = "0.1.0"
description = "Local real-time audio transcription and translation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sherpa-onnx>=1.10",
    # sherpa-onnx's native libs (bundled onnxruntime dylib) ship in this companion
    # package. Without it, uv builds sherpa-onnx from source and the resulting
    # extension fails to load libonnxruntime at import. See [tool.uv] find-links.
    "sherpa-onnx-core>=1.13",
    "ctranslate2>=4.4",
    "transformers>=4.44",
    "sentencepiece>=0.2",
    "sounddevice>=0.4.7",
    "soxr>=0.5",
    "numpy>=1.26,<2.2",
    "huggingface-hub>=0.25",
    "platformdirs>=4.2",
    "PySide6>=6.7",
    "macloop>=0.3; sys_platform == 'darwin'",
    "PyAudioWPatch>=0.2.12; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4"]
# Extended-language pack (Armenian etc.) via SeamlessM4T v2. Heavy; opt-in.
seamless = ["torch>=2.2"]

[project.scripts]
voicetotext = "voicetotext.main:main"

[tool.uv]
# Prebuilt sherpa-onnx + sherpa-onnx-core wheels (with bundled onnxruntime) live
# on the k2-fsa index; without this, uv builds sherpa-onnx from source and import fails.
find-links = ["https://k2-fsa.github.io/sherpa/onnx/cpu.html"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs downloaded ML models (deselect with -m 'not integration')",
]
